update methods for recursive task: - make logic with closing tasks - split methods - fix